# whisperIME

./: .gitignore  .gitmodules  README.md  build.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  whisper_jni.cpp
app/src/main/java/com/whispertflite/: DownloadActivity.kt  MainActivity.java  SettingsActivity.java  WhisperApp.java  WhisperInputMethodService.java  WhisperRecognitionService.java  WhisperRecognitionServiceSettingsActivity.java  WhisperRecognizeActivity.java  WhisperTileService.java  WhisperWidgetProvider.java
app/src/main/java/com/whispertflite/asr/: RecordBuffer.java  Recorder.java  Transcript.java  WarmWhisper.java  Whisper.java  WhisperResult.java
app/src/main/java/com/whispertflite/engine/: AsrEngine.java  SherpaEngine.kt  SileroVad.kt  TfliteEngine.java  WhisperCpp.java  WhisperCppEngine.java  WhisperEngineJava.java
app/src/main/java/com/whispertflite/history/: HistoryActivity.java  HistoryDb.java
app/src/main/java/com/whispertflite/models/: DeviceProfile.java  ModelCatalogActivity.java  ModelDownloadManager.java  ModelDownloadWorker.java  ModelInfo.java  ModelRecommender.java  ModelRegistry.java  ModelState.java  ThermalMonitor.java
app/src/main/java/com/whispertflite/ui/: AuroraOrbView.java  FrostedBlurView.java  LivingSignalDynamics.java  LivingSignalView.java  WaveformView.java
app/src/main/java/com/whispertflite/util/: AudioMath.java
app/src/main/java/com/whispertflite/utils/: HapticFeedback.java  InputLang.java  ThemeUtils.java
app/src/main/res/: resources.properties
app/src/main/res/color/: aurora_chip_bg.xml  aurora_chip_stroke.xml  aurora_chip_text.xml  glass_chip_bg.xml  glass_chip_stroke.xml  glass_chip_text.xml  glass_switch_thumb.xml  glass_switch_track.xml  glass_switch_track_deco.xml  seg_button_bg.xml  seg_button_text.xml
app/src/main/res/drawable/: action_button_background.xml  aurora_bg_radial.xml  aurora_circle_btn.xml  aurora_dropdown_bg.xml  aurora_panel_bg.xml  aurora_pill_bg.xml  badge_background.xml  card_sheen_glass.xml  card_sheen_soft.xml  card_sheen_warm.xml  dialog_drag_handle.xml  dialog_mic_circle.xml  dialog_sheet_background.xml  glass_circle_btn.xml  glass_pill_bar.xml  ic_check_20dp.xml  ic_chevron_right_20dp.xml  ic_close_24dp.xml  ic_expand_more_24dp.xml  ic_ime_backspace_24dp.xml  ic_ime_return_24dp.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_launcher_monochrome.xml  ic_model_bars_24dp.xml  ic_more_vert_24dp.xml  ic_settings_24dp.xml  ic_share_24dp.xml  ic_stop_24dp.xml  ic_tile_mic.xml  ic_volume_up_24dp.xml  icon_circle_dark.xml  icon_circle_light.xml  icon_tile.xml  icon_tile_active.xml  icon_tile_tflite.xml  icon_tile_whispercpp.xml  ime_living_background.xml  ime_mic_bg.xml  ime_mic_ring.xml  (+14 more)
app/src/main/res/drawable-night/: living_glass_circle.xml
app/src/main/res/font/: space_grotesk.xml
app/src/main/res/layout/: activity_download.xml  activity_history.xml  activity_main.xml  activity_model_catalog.xml  activity_model_catalog_glass.xml  activity_recognition_service_settings.xml  activity_recognize.xml  activity_settings.xml  aurora_menu_item.xml  aurora_spinner_dropdown.xml  aurora_spinner_item.xml  ime_more_menu.xml  include_howto_strip.xml  item_history.xml  item_model.xml  item_model_glass.xml  item_model_header.xml  menu_item.xml  voice_service.xml  widget_mic.xml
app/src/main/res/menu/: menu_catalog.xml  menu_history.xml
app/src/main/res/values/: attrs.xml  colors.xml  colors_glass.xml  colors_palettes.xml  dimens.xml  strings.xml  themes.xml
app/src/main/res/values-ar/: strings.xml
app/src/main/res/values-be/: strings.xml
app/src/main/res/values-cs/: strings.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-fa/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-hu/: strings.xml
app/src/main/res/values-it/: strings.xml
app/src/main/res/values-iw/: strings.xml
app/src/main/res/values-night/: colors.xml  colors_glass.xml  colors_palettes.xml
app/src/main/res/values-pt-rBR/: strings.xml
app/src/main/res/values-ro/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-sw600dp/: dimens.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/xml/: widget_info.xml
app/src/test/java/com/whispertflite/asr/: TranscriptTest.java
app/src/test/java/com/whispertflite/models/: ModelDownloadManagerTest.java  ModelIntegrityTest.java  ModelRecommenderTest.java  ThermalMonitorTest.java
app/src/test/java/com/whispertflite/ui/: LivingSignalDynamicsTest.java
app/src/test/java/com/whispertflite/util/: AudioMathTest.java
docs/: aurora-style.md
docs/superpowers/plans/: 2026-07-15-whisperime-redesign.md
docs/superpowers/specs/: 2026-07-15-whisperime-redesign-design.md  2026-07-16-living-signal-liquid-glass-design.md
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt
